checkout and get payment
