# src/Adapters/Primary/Api/Controllers/PaymentController.ts
@@ -1,6 +1,7 @@
 import { Request, Response, Router } from 'express'
 import { isLeft } from '../../../../Shared/util/either'
 import IPaymentService from '../../../../Application/Ports/Primary/IPaymentService'
+import Order from '../../../../Application/domain/Entities/Order'
 
 export default class PaymentController {
     constructor(readonly paymentService: IPaymentService) {}
@@ -8,6 +9,7 @@ export default class PaymentController {
     buildRouter(): Router {
         const router = Router()
         router.post('/checkout', this.checkout.bind(this))
+        router.get('/:id', this.get.bind(this))
         return router
     }
 
@@ -18,10 +20,36 @@ export default class PaymentController {
         if (isLeft(result)) {
             res.status(400).json(result.value.message)
         } else {
-            res.setHeader('Location', `/payment/${result.value}`)
-            res.status(200).json({
-                message: 'Payment initialized successfully',
-            })
+            const payment = result.value
+            const order = payment.getOrder()
+            let items: any[] = []
+            if (order instanceof Order) {
+                items = order.getItems()
+            }
+            const paymentResult = {
+                id: payment.getId(),
+                status: payment.getStatus(),
+                orderId: payment.getOrderId(),
+                items: items.map((item) => item.toJson()),
+            }
+            res.status(200).json(paymentResult)
+        }
+    }
+
+    async get(req: Request, res: Response): Promise<void> {
+        const { paymentId } = req.body
+        const result = await this.paymentService.get(paymentId)
+
+        if (isLeft(result)) {
+            res.status(400).json(result.value.message)
+        } else {
+            const payment = result.value
+            const paymentResult = {
+                id: payment.getId(),
+                status: payment.getStatus(),
+                orderId: payment.getOrderId(),
+            }
+            res.status(200).json(paymentResult)
         }
     }
 }
