# swagger.json
@@ -406,6 +406,42 @@
                 }
             }
         },
+        "/payment/{id}": {
+            "get": {
+                "summary": "Get a payment by ID",
+                "tags": ["Payments"],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the payment to find",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Payment found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/PaymentStatusDTO"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Payment not found"
+                    },
+                    "500": {
+                        "description": "Internal server error"
+                    }
+                }
+            }
+        },
         "/payment/checkout": {
             "post": {
                 "summary": "Initialize payment process",
@@ -600,6 +636,14 @@
                 "type": "object",
                 "properties": {
                     "orderId": {
+                        "type": "string"
+                    }
+                }
+            },
+            "PaymentStatusDTO": {
+                "type": "object",
+                "properties": {
+                    "paymentId": {
                         "type": "string"
                     }
                 }
